// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridRow GridRowLink matches snapshot 1`] = `
<DocumentFragment>
  <div>
    <h3>
      header
    </h3>
    <p>
      description
    </p>
    <p>
      <a
        href="href"
        rel="noreferrer"
        target="_blank"
      >
        <span
          class="externalLink"
        >
          label
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
          </svg>
        </span>
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`GridRow GridRowList matches snapshot 1`] = `
<DocumentFragment>
  <div>
    <h3>
      header
    </h3>
    <ul>
      <li>
        data-1
      </li>
      <li>
        data-2
      </li>
      <li>
        data-3
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`GridRow GridRowParagraph matches snapshot 1`] = `
<DocumentFragment>
  <div>
    <h3>
      header
    </h3>
    <p>
      data
    </p>
  </div>
</DocumentFragment>
`;
